kubernetes/clusters/home/apps/blog/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: blog
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`lucawalz.dev`)
      kind: Rule
      services:
        - name: blog
          port: 80
  tls: {}
